fixed hero on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1513,7 +1513,7 @@ body.no-scroll {
 
     /* Остальные стили секций остаются без изменений */
     .hero {
-        max-height: 100vh;
+        height: 100vh;
         padding: 20px 10px;
         width: 100%;
     }
